# AcrylicEffect

./: CMakeLists.txt
include/: acrylicEffect.h  acrylicEffect_private.h
src/: acrylicEffect.cpp
